environment/firewall.tf
#########################
#### SECURITY GROUPS ####
#########################

resource "aws_security_group" "alb_sg" {
  name        = "alb_sg"
  description = "Custome security group for ALB"
  vpc_id      = aws_vpc.app_plane.id

  ingress {
    description      = "HTTPS from all"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

   ingress {
    description      = "HTTP from all"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}



##############
#### NACL ####
##############
